CRUD funcionando com os relacionamentos e configurado insominia para testes
